--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,12 @@
 {% block content %}
 <h1 class="center-align">ยินดีต้อนรับ</h1>
 <div class="card white">
-    <div class="card-content">
-        <span class="card-title center-align">ลิงค์ m3u</span>
+    <div class="card-content center-align">
+        <span class="card-title">ลิงค์ m3u</span>
         <p id="m3u-link" >{{ m3u_link }}</p>
+        <span class="smaller-text">
+            อัพเดทล่าสุด: {{ update }}
+        </span>
     </div>
 </div>
 
